--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,13 @@ jobs:
       - name: Build Slidev project
         run: yarn run slidev build
 
+      - name: Archive production artifacts
+        if: github.event_name != 'pull_request'
+        uses: actions/upload-artifact@v3
+        with:
+          name: slidev-build
+          path: ./dist
+
       - name: Deploy to GitHub Pages
         if: github.event_name != 'pull_request'
         id: deployment
