--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build Slidev project
         run: yarn run slidev build
 
+      - name: Copy pictures
+        run: cp -R pictures dist/
+
       - name: Archive production artifacts
         if: github.event_name != 'pull_request'
         uses: actions/upload-pages-artifact@v3
